# AccessGram

./: .gitignore  AGENTS.md  README.md  pyproject.toml
accessgram/: __main__.py  app.py
accessgram/audio/: sound_effects.py
accessgram/core/: auth.py  client.py  media.py
accessgram/ui/: login.py  profile_dialog.py  search_dialog.py  window.py
accessgram/ui/widgets/: __init__.py  inline_buttons.py  media_download.py  voice_player.py  voice_recorder.py
accessgram/utils/: config.py  formatting.py
packaging/archlinux/: .SRCINFO  PKGBUILD  accessgram.desktop
